--- a/3_chapter_linear-regression/linear-regression-concise.ipynb
+++ b/3_chapter_linear-regression/linear-regression-concise.ipynb
@@ -343,7 +343,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2025-02-01T18:08:18.385223</dc:date>\n",
+       "    <dc:date>2025-02-02T13:36:06.941057</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -378,12 +378,12 @@
        "    <g id=\"xtick_1\">\n",
        "     <g id=\"line2d_1\">\n",
        "      <defs>\n",
-       "       <path id=\"m0336b325f0\" d=\"M 0 0 \n",
+       "       <path id=\"m39de17f0d9\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"26.925\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"26.925\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -428,7 +428,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"59.475\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"59.475\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -470,7 +470,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"92.025\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"92.025\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -501,7 +501,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"124.575\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"124.575\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -516,7 +516,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"157.125\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"157.125\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -557,7 +557,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"189.675\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"189.675\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -572,7 +572,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m0336b325f0\" x=\"222.225\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m39de17f0d9\" x=\"222.225\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -747,17 +747,17 @@
        "    <g id=\"ytick_1\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <defs>\n",
-       "       <path id=\"mbd2ac0e0d4\" d=\"M 0 0 \n",
+       "       <path id=\"mc72dd1c4a1\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mbd2ac0e0d4\" x=\"26.925\" y=\"139.503182\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mc72dd1c4a1\" x=\"26.925\" y=\"139.503865\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
        "      <!-- 0 -->\n",
-       "      <g transform=\"translate(13.5625 143.302401) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(13.5625 143.303083) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
        "      </g>\n",
        "     </g>\n",
@@ -765,12 +765,12 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mbd2ac0e0d4\" x=\"26.925\" y=\"104.411249\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mc72dd1c4a1\" x=\"26.925\" y=\"105.824334\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
        "      <!-- 5 -->\n",
-       "      <g transform=\"translate(13.5625 108.210468) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(13.5625 109.623553) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-35\"/>\n",
        "      </g>\n",
        "     </g>\n",
@@ -778,12 +778,12 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mbd2ac0e0d4\" x=\"26.925\" y=\"69.319315\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mc72dd1c4a1\" x=\"26.925\" y=\"72.144804\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
        "      <!-- 10 -->\n",
-       "      <g transform=\"translate(7.2 73.118534) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(7.2 75.944022) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-31\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-30\" x=\"63.623047\"/>\n",
        "      </g>\n",
@@ -792,12 +792,12 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mbd2ac0e0d4\" x=\"26.925\" y=\"34.227382\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mc72dd1c4a1\" x=\"26.925\" y=\"38.465273\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
        "      <!-- 15 -->\n",
-       "      <g transform=\"translate(7.2 38.026601) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(7.2 42.264492) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-31\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"63.623047\"/>\n",
        "      </g>\n",
@@ -806,96 +806,96 @@
        "   </g>\n",
        "   <g id=\"line2d_12\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_13\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_14\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_15\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_16\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_17\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_18\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "L 139.832812 139.056198 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "L 139.832812 139.108358 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_19\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_20\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "L 139.832812 139.056198 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "L 139.832812 139.108358 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_21\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "L 157.125 139.38418 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "L 157.125 139.37584 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_22\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "L 139.832812 139.056198 \n",
-       "L 172.382812 139.448387 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "L 139.832812 139.108358 \n",
+       "L 172.382812 139.445638 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_23\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "L 157.125 139.38418 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "L 157.125 139.37584 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_24\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "L 139.832812 139.056198 \n",
-       "L 172.382812 139.448387 \n",
-       "L 204.932812 139.495337 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "L 139.832812 139.108358 \n",
+       "L 172.382812 139.445638 \n",
+       "L 204.932812 139.493735 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_25\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "L 157.125 139.38418 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "L 157.125 139.37584 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_26\">\n",
        "    <path d=\"M 42.182813 13.5 \n",
-       "L 74.732812 120.175233 \n",
-       "L 107.282813 136.756927 \n",
-       "L 139.832812 139.056198 \n",
-       "L 172.382812 139.448387 \n",
-       "L 204.932812 139.495337 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "L 74.732812 122.305841 \n",
+       "L 107.282813 136.876806 \n",
+       "L 139.832812 139.108358 \n",
+       "L 172.382812 139.445638 \n",
+       "L 204.932812 139.493735 \n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_27\">\n",
-       "    <path d=\"M 92.025 133.341634 \n",
-       "L 157.125 139.38418 \n",
+       "    <path d=\"M 92.025 133.832251 \n",
+       "L 157.125 139.37584 \n",
        "L 222.225 139.5 \n",
-       "\" clip-path=\"url(#p055cadf2e4)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
+       "\" clip-path=\"url(#pb0caf2abe6)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #ff7f0e; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 26.925 145.8 \n",
@@ -1137,7 +1137,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p055cadf2e4\">\n",
+       "  <clipPath id=\"pb0caf2abe6\">\n",
        "   <rect x=\"26.925\" y=\"7.2\" width=\"195.3\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1223,8 +1223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error in estimating w: tensor([ 0.0034, -0.0118])\n",
-      "error in estimating b: tensor([0.0136])\n"
+      "error in estimating w: tensor([ 0.0039, -0.0168])\n",
+      "error in estimating b: tensor([0.0131])\n"
      ]
     }
    ],
