--- a/3_chapter_linear-regression/weight-decay.ipynb
+++ b/3_chapter_linear-regression/weight-decay.ipynb
@@ -5238,8 +5238,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
