--- a/5_chapter_multilayer-perceptrons/numerical-stability-and-init.ipynb
+++ b/5_chapter_multilayer-perceptrons/numerical-stability-and-init.ipynb
@@ -153,7 +153,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-08-18T19:43:22.583883</dc:date>\n",
+       "    <dc:date>2025-02-03T12:59:02.458262</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -189,16 +189,16 @@
        "     <g id=\"line2d_1\">\n",
        "      <path d=\"M 48.695149 145.8 \n",
        "L 48.695149 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_2\">\n",
        "      <defs>\n",
-       "       <path id=\"m2530e70050\" d=\"M 0 0 \n",
+       "       <path id=\"m66e17863a1\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"48.695149\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"48.695149\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -266,11 +266,11 @@
        "     <g id=\"line2d_3\">\n",
        "      <path d=\"M 84.587088 145.8 \n",
        "L 84.587088 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"84.587088\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"84.587088\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -310,11 +310,11 @@
        "     <g id=\"line2d_5\">\n",
        "      <path d=\"M 120.479027 145.8 \n",
        "L 120.479027 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"120.479027\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"120.479027\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -357,11 +357,11 @@
        "     <g id=\"line2d_7\">\n",
        "      <path d=\"M 156.370967 145.8 \n",
        "L 156.370967 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"156.370967\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"156.370967\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -377,11 +377,11 @@
        "     <g id=\"line2d_9\">\n",
        "      <path d=\"M 192.262906 145.8 \n",
        "L 192.262906 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"192.262906\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"192.262906\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -397,11 +397,11 @@
        "     <g id=\"line2d_11\">\n",
        "      <path d=\"M 228.154845 145.8 \n",
        "L 228.154845 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"228.154845\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"228.154845\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -417,11 +417,11 @@
        "     <g id=\"line2d_13\">\n",
        "      <path d=\"M 264.046784 145.8 \n",
        "L 264.046784 7.2 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2530e70050\" x=\"264.046784\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m66e17863a1\" x=\"264.046784\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -439,16 +439,16 @@
        "     <g id=\"line2d_15\">\n",
        "      <path d=\"M 30.103125 139.54227 \n",
        "L 281.203125 139.54227 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_16\">\n",
        "      <defs>\n",
-       "       <path id=\"me74453679b\" d=\"M 0 0 \n",
+       "       <path id=\"m02571cc51c\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"139.54227\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"139.54227\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -464,11 +464,11 @@
        "     <g id=\"line2d_17\">\n",
        "      <path d=\"M 30.103125 114.32447 \n",
        "L 281.203125 114.32447 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"114.32447\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"114.32447\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -484,11 +484,11 @@
        "     <g id=\"line2d_19\">\n",
        "      <path d=\"M 30.103125 89.106669 \n",
        "L 281.203125 89.106669 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_20\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"89.106669\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"89.106669\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -525,11 +525,11 @@
        "     <g id=\"line2d_21\">\n",
        "      <path d=\"M 30.103125 63.888869 \n",
        "L 281.203125 63.888869 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_22\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"63.888869\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"63.888869\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -577,11 +577,11 @@
        "     <g id=\"line2d_23\">\n",
        "      <path d=\"M 30.103125 38.671069 \n",
        "L 281.203125 38.671069 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_24\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"38.671069\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"38.671069\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -638,11 +638,11 @@
        "     <g id=\"line2d_25\">\n",
        "      <path d=\"M 30.103125 13.453269 \n",
        "L 281.203125 13.453269 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_26\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me74453679b\" x=\"30.103125\" y=\"13.453269\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m02571cc51c\" x=\"30.103125\" y=\"13.453269\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -719,7 +719,7 @@
        "L 256.868396 13.568135 \n",
        "L 269.789489 13.5 \n",
        "L 269.789489 13.5 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_28\">\n",
        "    <path d=\"M 41.516761 139.5 \n",
@@ -770,7 +770,7 @@
        "L 251.125684 139.371202 \n",
        "L 269.789489 139.495556 \n",
        "L 269.789489 139.495556 \n",
-       "\" clip-path=\"url(#p03b66e1db7)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
+       "\" clip-path=\"url(#pea5504528c)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 30.103125 145.8 \n",
@@ -1121,7 +1121,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p03b66e1db7\">\n",
+       "  <clipPath id=\"pea5504528c\">\n",
        "   <rect x=\"30.103125\" y=\"7.2\" width=\"251.1\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1203,15 +1203,15 @@
      "output_type": "stream",
      "text": [
       "a single matrix \n",
-      " tensor([[-0.8755, -1.2171,  1.3316,  0.1357],\n",
-      "        [ 0.4399,  1.4073, -1.9131, -0.4608],\n",
-      "        [-2.1420,  0.3643, -0.5267,  1.0277],\n",
-      "        [-0.1734, -0.7549,  2.3024,  1.3085]])\n",
+      " tensor([[ 0.4979,  0.9483, -0.7022,  0.2200],\n",
+      "        [ 0.7610,  0.1881, -1.5110, -0.4351],\n",
+      "        [-0.1260, -0.5036,  0.4781,  2.6022],\n",
+      "        [-0.4137,  0.9230, -1.0029, -0.3547]])\n",
       "after multiplying 100 matrices\n",
-      " tensor([[-2.9185e+23,  1.3915e+25, -1.1865e+25,  1.4354e+24],\n",
-      "        [ 4.9142e+23, -2.3430e+25,  1.9979e+25, -2.4169e+24],\n",
-      "        [ 2.6578e+23, -1.2672e+25,  1.0805e+25, -1.3072e+24],\n",
-      "        [-5.2223e+23,  2.4899e+25, -2.1231e+25,  2.5684e+24]])\n"
+      " tensor([[-1.3918e+26,  2.4047e+25,  4.4321e+25, -5.9051e+25],\n",
+      "        [-1.3336e+26,  2.3042e+25,  4.2469e+25, -5.6582e+25],\n",
+      "        [-3.9439e+26,  6.8141e+25,  1.2559e+26, -1.6733e+26],\n",
+      "        [-3.0889e+25,  5.3370e+24,  9.8367e+24, -1.3106e+25]])\n"
      ]
     }
    ],
@@ -1429,8 +1429,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
