--- a/6_chapter_builders-guide/use-gpu.ipynb
+++ b/6_chapter_builders-guide/use-gpu.ipynb
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
      "execution_count": 3,
@@ -253,7 +253,7 @@
       "text/plain": [
        "(device(type='cuda', index=0),\n",
        " device(type='cpu'),\n",
-       " [device(type='cuda', index=0), device(type='cuda', index=1)])"
+       " [device(type='cuda', index=0)])"
       ]
      },
      "execution_count": 4,
@@ -422,8 +422,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0022, 0.5723, 0.2890],\n",
-       "        [0.1456, 0.3537, 0.7359]], device='cuda:1')"
+       "tensor([[0.2770, 0.7684, 0.5938],\n",
+       "        [0.5968, 0.3112, 0.7625]])"
       ]
      },
      "execution_count": 7,
@@ -479,13 +479,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1., 1., 1.],\n",
-      "        [1., 1., 1.]], device='cuda:0')\n",
-      "tensor([[1., 1., 1.],\n",
-      "        [1., 1., 1.]], device='cuda:1')\n"
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: invalid device ordinal\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Z \u001b[38;5;241m=\u001b[39m \u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(X)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(Z)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: invalid device ordinal\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n"
      ]
     }
    ],
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2cfea6e5",
    "metadata": {
     "execution": {
@@ -523,15 +524,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[1.0022, 1.5723, 1.2890],\n",
-       "        [1.1456, 1.3537, 1.7359]], device='cuda:1')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mZ\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!"
+     ]
     }
    ],
    "source": [
@@ -634,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "8bcc281a",
    "metadata": {
     "execution": {
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "351af69d",
    "metadata": {
     "execution": {
@@ -688,11 +689,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.7802],\n",
-       "        [0.7802]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+       "tensor([[-0.8901],\n",
+       "        [-0.8901]], device='cuda:0', grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6fdbd2c3",
    "metadata": {
     "execution": {
@@ -734,7 +735,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "1283ae3a",
    "metadata": {
     "execution": {
@@ -845,8 +846,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
