--- a/6_chapter_builders-guide/custom-layer.ipynb
+++ b/6_chapter_builders-guide/custom-layer.ipynb
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-6.5193e-09, grad_fn=<MeanBackward0>)"
+       "tensor(1.8626e-09, grad_fn=<MeanBackward0>)"
       ]
      },
      "execution_count": 5,
@@ -307,11 +307,11 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[ 0.4783,  0.4284, -0.0899],\n",
-       "        [-0.6347,  0.2913, -0.0822],\n",
-       "        [-0.4325, -0.1645, -0.3274],\n",
-       "        [ 1.1898,  0.6482, -1.2384],\n",
-       "        [-0.1479,  0.0264, -0.9597]], requires_grad=True)"
+       "tensor([[ 0.9859, -0.2714,  0.4626],\n",
+       "        [-0.7945,  1.5633, -0.9182],\n",
+       "        [-1.2823, -1.3683, -1.6531],\n",
+       "        [ 1.2497, -0.7811, -0.6678],\n",
+       "        [ 0.9831,  0.1809, -0.9225]], requires_grad=True)"
       ]
      },
      "execution_count": 7,
@@ -354,8 +354,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0000, 0.9316, 0.0000],\n",
-       "        [0.1808, 1.4208, 0.0000]])"
+       "tensor([[1.8494, 0.0000, 0.0000],\n",
+       "        [1.1624, 0.0000, 0.0000]])"
       ]
      },
      "execution_count": 8,
@@ -398,8 +398,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000],\n",
-       "        [13.0800]])"
+       "tensor([[5.6047],\n",
+       "        [3.3067]])"
       ]
      },
      "execution_count": 9,
@@ -448,8 +448,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
