--- a/6_chapter_builders-guide/custom-layer_translated.ipynb
+++ b/6_chapter_builders-guide/custom-layer_translated.ipynb
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-6.5193e-09, grad_fn=<MeanBackward0>)"
+       "tensor(1.8626e-09, grad_fn=<MeanBackward0>)"
       ]
      },
      "execution_count": 5,
@@ -303,11 +303,11 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[ 0.4783,  0.4284, -0.0899],\n",
-       "        [-0.6347,  0.2913, -0.0822],\n",
-       "        [-0.4325, -0.1645, -0.3274],\n",
-       "        [ 1.1898,  0.6482, -1.2384],\n",
-       "        [-0.1479,  0.0264, -0.9597]], requires_grad=True)"
+       "tensor([[ 0.5817,  0.2735,  0.3031],\n",
+       "        [ 0.3679, -1.7366, -0.3677],\n",
+       "        [-0.7872, -0.6620,  0.9763],\n",
+       "        [ 0.9532,  0.8203,  1.0700],\n",
+       "        [ 0.0386,  0.1267, -0.2559]], requires_grad=True)"
       ]
      },
      "execution_count": 7,
@@ -350,8 +350,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0000, 0.9316, 0.0000],\n",
-       "        [0.1808, 1.4208, 0.0000]])"
+       "tensor([[2.2603, 0.0000, 1.3192],\n",
+       "        [2.7546, 0.0000, 0.3458]])"
       ]
      },
      "execution_count": 8,
@@ -394,8 +394,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000],\n",
-       "        [13.0800]])"
+       "tensor([[0.9804],\n",
+       "        [3.6337]])"
       ]
      },
      "execution_count": 9,
@@ -442,8 +442,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
