--- a/6_chapter_builders-guide/init-param.ipynb
+++ b/6_chapter_builders-guide/init-param.ipynb
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([-0.0129, -0.0007, -0.0033,  0.0276]), tensor(0.))"
+       "(tensor([ 0.0046, -0.0207, -0.0069,  0.0036]), tensor(0.))"
       ]
      },
      "execution_count": 3,
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0974,  0.1707,  0.5840, -0.5032])\n",
+      "tensor([ 0.0505, -0.4529,  0.0500,  0.2186])\n",
       "tensor([[42., 42., 42., 42., 42., 42., 42., 42.]])\n"
      ]
     }
@@ -313,8 +313,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000, -7.6364, -0.0000, -6.1206],\n",
-       "        [ 9.3516, -0.0000,  5.1208, -8.4003]], grad_fn=<SliceBackward0>)"
+       "tensor([[ 7.8412,  8.3532, -0.0000, -0.0000],\n",
+       "        [-0.0000,  8.5623, -7.2332,  5.9551]], grad_fn=<SliceBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -368,7 +368,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([42.0000, -6.6364,  1.0000, -5.1206])"
+       "tensor([42.0000,  9.3532,  1.0000,  1.0000])"
       ]
      },
      "execution_count": 7,
@@ -413,8 +413,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
