--- a/6_chapter_builders-guide/init-param_translated.ipynb
+++ b/6_chapter_builders-guide/init-param_translated.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([-0.0129, -0.0007, -0.0033,  0.0276]), tensor(0.))"
+       "(tensor([-0.0128, -0.0103,  0.0103,  0.0009]), tensor(0.))"
       ]
      },
      "execution_count": 3,
@@ -223,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0974,  0.1707,  0.5840, -0.5032])\n",
+      "tensor([ 0.5314, -0.5090, -0.6871,  0.4311])\n",
       "tensor([[42., 42., 42., 42., 42., 42., 42., 42.]])\n"
      ]
     }
@@ -309,8 +309,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000, -7.6364, -0.0000, -6.1206],\n",
-       "        [ 9.3516, -0.0000,  5.1208, -8.4003]], grad_fn=<SliceBackward0>)"
+       "tensor([[-0.0000,  6.7383,  7.3089,  0.0000],\n",
+       "        [ 9.5873,  0.0000, -9.2901, -0.0000]], grad_fn=<SliceBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([42.0000, -6.6364,  1.0000, -5.1206])"
+       "tensor([42.0000,  7.7383,  8.3089,  1.0000])"
       ]
      },
      "execution_count": 7,
@@ -408,8 +408,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
