--- a/6_chapter_builders-guide/model-construction.ipynb
+++ b/6_chapter_builders-guide/model-construction.ipynb
@@ -602,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-0.3836, grad_fn=<SumBackward0>)"
+       "tensor(-0.0145, grad_fn=<SumBackward0>)"
       ]
      },
      "execution_count": 8,
@@ -648,7 +648,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.0679, grad_fn=<SumBackward0>)"
+       "tensor(0.0326, grad_fn=<SumBackward0>)"
       ]
      },
      "execution_count": 9,
@@ -711,8 +711,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
