--- a/6_chapter_builders-guide/model-construction_translated.ipynb
+++ b/6_chapter_builders-guide/model-construction_translated.ipynb
@@ -555,7 +555,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-0.3836, grad_fn=<SumBackward0>)"
+       "tensor(-0.0820, grad_fn=<SumBackward0>)"
       ]
      },
      "execution_count": 8,
@@ -599,7 +599,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.0679, grad_fn=<SumBackward0>)"
+       "tensor(0.1351, grad_fn=<SumBackward0>)"
       ]
      },
      "execution_count": 9,
@@ -662,8 +662,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
