--- a/6_chapter_builders-guide/parameters.ipynb
+++ b/6_chapter_builders-guide/parameters.ipynb
@@ -170,8 +170,8 @@
      "data": {
       "text/plain": [
        "OrderedDict([('weight',\n",
-       "              tensor([[-0.1649,  0.0605,  0.1694, -0.2524,  0.3526, -0.3414, -0.2322,  0.0822]])),\n",
-       "             ('bias', tensor([0.0709]))])"
+       "              tensor([[-0.2115, -0.1620,  0.2359,  0.3530,  0.3318, -0.1479, -0.0181, -0.3466]])),\n",
+       "             ('bias', tensor([-0.3176]))])"
       ]
      },
      "execution_count": 3,
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.nn.parameter.Parameter, tensor([0.0709]))"
+       "(torch.nn.parameter.Parameter, tensor([-0.3176]))"
       ]
      },
      "execution_count": 4,
@@ -474,8 +474,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
