--- a/6_chapter_builders-guide/parameters_translated.ipynb
+++ b/6_chapter_builders-guide/parameters_translated.ipynb
@@ -143,8 +143,8 @@
      "data": {
       "text/plain": [
        "OrderedDict([('weight',\n",
-       "              tensor([[-0.1649,  0.0605,  0.1694, -0.2524,  0.3526, -0.3414, -0.2322,  0.0822]])),\n",
-       "             ('bias', tensor([0.0709]))])"
+       "              tensor([[ 0.1097, -0.2902, -0.2685,  0.0790, -0.1595,  0.0364,  0.2286,  0.0852]])),\n",
+       "             ('bias', tensor([-0.2319]))])"
       ]
      },
      "execution_count": 3,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.nn.parameter.Parameter, tensor([0.0709]))"
+       "(torch.nn.parameter.Parameter, tensor([-0.2319]))"
       ]
      },
      "execution_count": 4,
@@ -427,8 +427,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
