--- a/6_chapter_builders-guide/use-gpu_translated.ipynb
+++ b/6_chapter_builders-guide/use-gpu_translated.ipynb
@@ -801,8 +801,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
