--- a/7_chapter_convolutional-neural-networks/conv-layer.ipynb
+++ b/7_chapter_convolutional-neural-networks/conv-layer.ipynb
@@ -496,11 +496,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2, loss 16.481\n",
-      "epoch 4, loss 5.069\n",
-      "epoch 6, loss 1.794\n",
-      "epoch 8, loss 0.688\n",
-      "epoch 10, loss 0.274\n"
+      "epoch 2, loss 19.022\n",
+      "epoch 4, loss 6.281\n",
+      "epoch 6, loss 2.319\n",
+      "epoch 8, loss 0.908\n",
+      "epoch 10, loss 0.365\n"
      ]
     }
    ],
@@ -557,7 +557,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.0398, -0.9328]])"
+       "tensor([[ 1.0489, -0.9251]])"
       ]
      },
      "execution_count": 10,
@@ -714,8 +714,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
