--- a/9_chapter_recurrent-neural-networks/language-model.ipynb
+++ b/9_chapter_recurrent-neural-networks/language-model.ipynb
@@ -396,17 +396,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading ../data/timemachine.txt from http://d2l-data.s3-accelerate.amazonaws.com/timemachine.txt...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X: tensor([[10,  4,  2, 21, 10, 16, 15,  0, 20,  2],\n",
-      "        [21,  9,  6, 19,  0, 24,  2, 26,  0, 16]]) \n",
-      "Y: tensor([[ 4,  2, 21, 10, 16, 15,  0, 20,  2, 10],\n",
-      "        [ 9,  6, 19,  0, 24,  2, 26,  0, 16,  9]])\n"
+      "X: tensor([[10, 19,  6,  4, 21, 10, 16, 15,  0,  2],\n",
+      "        [21,  6,  5,  0, 21,  9,  6,  0, 17, 20]]) \n",
+      "Y: tensor([[19,  6,  4, 21, 10, 16, 15,  0,  2, 13],\n",
+      "        [ 6,  5,  0, 21,  9,  6,  0, 17, 20, 26]])\n"
      ]
     }
    ],
@@ -460,8 +453,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
