--- a/9_chapter_recurrent-neural-networks/rnn.ipynb
+++ b/9_chapter_recurrent-neural-networks/rnn.ipynb
@@ -190,9 +190,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.2526,  0.0580, -3.3460, -0.2519],\n",
-       "        [-1.3064,  1.4132, -0.1435,  0.3482],\n",
-       "        [ 3.1495,  0.8172,  1.5167, -0.9038]])"
+       "tensor([[ 1.3300, -1.0190, -2.0292,  0.8848],\n",
+       "        [ 1.2658, -1.4968, -2.8584,  0.6315],\n",
+       "        [ 5.9038, -0.3095, -5.3391,  1.4056]])"
       ]
      },
      "execution_count": 2,
@@ -246,9 +246,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.2526,  0.0580, -3.3460, -0.2519],\n",
-       "        [-1.3064,  1.4132, -0.1435,  0.3482],\n",
-       "        [ 3.1495,  0.8172,  1.5167, -0.9038]])"
+       "tensor([[ 1.3300, -1.0190, -2.0292,  0.8848],\n",
+       "        [ 1.2658, -1.4968, -2.8584,  0.6315],\n",
+       "        [ 5.9038, -0.3095, -5.3391,  1.4056]])"
       ]
      },
      "execution_count": 3,
@@ -325,8 +325,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
